Closed
Bug 314351
Opened 20 years ago
Closed 14 years ago
Reply to .EML or message/rfc822: problems with MIME-encoded Subject
Categories
(MailNews Core :: Backend, defect)
MailNews Core
Backend
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 13.0
People
(Reporter: mcow, Assigned: hiro)
References
(Blocks 1 open bug)
Details
(Keywords: intl)
Attachments
(5 files, 1 obsolete file)
TB 1.6a1-1028, Win2K
With the patches for bug 268746 and bug 204350, it is now possible to use the
Reply, Forward and Edit As New commands in a message window that's displaying a
.EML file or a message/rfc822 attachment.
However, if the Subject or From headers have been MIME-encoded, replying to such a message mangles the Subject and To headers in the new composition. (However, CC: and To: headers are copied correctly, in the case of a Reply All.) The exception seems to be if the header is tagged as ISO-8859-1 and/or all its contents fit in ISO-8859-1.
This appears to be true regardless of the encoding used by the message itself
or for the new message composition -- whether or not either or both are the same encoding as the header in question, the resultant header is wrong.
Test message forthcoming.
| Reporter | ||
Comment 1•20 years ago
|
||
Steps to reproduce:
1) Save this attachment to disk.
2) Open it from Thunderbird (or Seamonkey) using File|Open
3) In the message window, click Reply All
Actual results:
To: field (originally Big5) and Subject: field (Windows-1255) are gibberish;
CC: fields are OK.
Expected results:
Characters copied over as displayed in initial message.
This message can be further tweaked by changing its charset, and the charset used for the reply can be tweaked in Options/Preferences. I haven't found a combination that preserves either the To: or Subject: header text.
Comment 2•18 years ago
|
||
On linux the reply subject becomes only "Re: ". (Tried todays tb2.0 build)
Updated•17 years ago
|
QA Contact: backend
Updated•17 years ago
|
Product: Core → MailNews Core
Comment 4•17 years ago
|
||
This is another manifestation of what appears to be this bug in T'Bird 2.0.0.17. This simple .eml file has a From: header which is utf-8 quoted-printable encoded and a message body which is utf-8 encoded. When t2.eml is opened in T'Bird, the From and message body display properly, but upon Reply, the To: and ...wrote: in the composition window are garbled.
Comment 5•17 years ago
|
||
This message is identical to the attached t2.eml except that the body is iso-8859-1 encoded instead of utf-8 encoded. This message doesn't exhibit the problem.
Comment 6•16 years ago
|
||
reply using TB trunk
To: field looks good
subject jibberish
| Reporter | ||
Comment 7•16 years ago
|
||
I see that as well.
Mark Sapiro's problem (a different bug) also WFM in trunk.
Summary: Reply to .EML or message/rfc822: problems with MIME-encoded headers → Reply to .EML or message/rfc822: problems with MIME-encoded Subject
| Assignee | ||
Comment 9•14 years ago
|
||
nsDummyMsgHeader in mail/base/content/msgHdrViewOverlay.js stores 'subject' as decoded text. So decoding the subject in nsMsgCompose::CreateMessage is not needed.
I will post a test for this issue later.
| Assignee | ||
Comment 10•14 years ago
|
||
The subject in the test is '∀a∊A'.
Attachment #588809 -
Flags: review?(dbienvenu)
Comment 11•14 years ago
|
||
Comment on attachment 588809 [details] [diff] [review]
The test
thx very much for the patch, r=me, but a couple nits:
+ * Test that MIME encoded subject is decoded when replying an opened .eml.
+ */
+function test_replay_eml_subject() {
typo: should be reply_eml_subject, not replay
and the comment should be
"when replying to an opened .eml file"
Attachment #588809 -
Flags: review?(dbienvenu) → review+
Comment 12•14 years ago
|
||
Comment on attachment 588589 [details] [diff] [review]
Proposed fix
thx for the patch and test!
Attachment #588589 -
Flags: review?(dbienvenu) → review+
| Assignee | ||
Comment 13•14 years ago
|
||
carrying over review+.
Attachment #588809 -
Attachment is obsolete: true
Attachment #597581 -
Flags: review+
| Assignee | ||
Updated•14 years ago
|
Keywords: checkin-needed
Comment 14•14 years ago
|
||
http://hg.mozilla.org/comm-central/rev/fc98c220816a
http://hg.mozilla.org/comm-central/rev/348640b81582
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Flags: in-testsuite+
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 13.0
You need to log in
before you can comment on or make changes to this bug.
Description
•