Bug 314351 - Reply to .EML or message/rfc822: problems with MIME-encoded Subject. r=dbienvenu